codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__experimental_features_view__tests__voice_runtime_unavailable.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
assertion_line: 208
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Codex server.
  No server experiments available.

  No experimental features available for now

  Press space to select or enter to save
